--- a/MySql_Database/templates/register.html
+++ b/MySql_Database/templates/register.html
@@ -7,7 +7,7 @@
             <form method="POST" autocomplete="off">
                 {% csrf_token %}
                 {{form|crispy}}
-                <button type="submit" class="btn btn-primary btn-block">Register</button>
+                <button type="submit" class="btn btn-primary btn-block">Insert</button>
             </form>
         </div>
     </div>
